# BayesHI

./: BayesHI Example.ipynb  BayesLSTMTest.ipynb  LICENSE  LSTM LOS profiles.ipynb  LSTM absorption.ipynb  LSTM seq to vec testing.ipynb  NewPETesting.ipynb  README.md  TPCNet training.ipynb  __init__.py  bayeshi testing.ipynb  config.py  dataloadertesting.ipynb  inference.py  main.py  models.py  profiling.ipynb  pyproject.toml  rnn testing.ipynb  saury testing.ipynb  sigma evolution.ipynb  tpcnet_newPE_training_delete.pth
.ipynb_checkpoints/: BayesHI Example-checkpoint.ipynb  NewPETesting-checkpoint.ipynb  TPCNet training-checkpoint.ipynb
bayeshi/: __init__.py  data_loaders.py  inference.py  models.py  utils.py
bayeshi/weights/: bayeshi.pth  saury.pth  tpcnet.pth  tpcnet_v2.pth
checkpoints/: dummy_bayeshi.pth  tpcnet_newPE_training.pth  tpcnet_newPE_training_delete.pth
python/bayeshi/: __init__.py  models.py  utils.py
test/: test_data_loaders.py  test_models.py
